--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
-                        <span class="stat-number">1,000+</span>
+                        <span class="stat-number">1+</span>
                         <span class="stat-label">Waitlist Signups</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">65%</span>
+                        <span class="stat-number">63%</span>
                         <span class="stat-label">Development Progress</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">Q2 2024</span>
+                        <span class="stat-number">2027</span>
                         <span class="stat-label">Estimated Launch</span>
                     </div>
                 </div>
