--- a/index.html
+++ b/index.html
@@ -493,9 +493,8 @@
                     <h3>tufn</h3>
                     <p>Minimalist productivity for maximum focus.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://x.com/tufn_off" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/tufn" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -519,8 +518,7 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> hello@tufn.app</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Made with ❤️</li>
+                        <li><i class="fas fa-envelope"></i> tunf_off@proton.me</li>
                     </ul>
                 </div>
             </div>
