--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> tufn_off@proton.me</li>
+                        <li><i class="fas fa-envelope"></i> tufn-off@proton.me</li>
                     </ul>
                 </div>
             </div>
