--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="twitter:image" content="https://tufn.github.io/images/tufn-preview.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="google-site-verification" content="0nr0dtW8uwU2h5Gd1019QFD3GgnkcDtCe11z4E6JDjc" />
 </head>
 <body>
     <!-- Theme Toggle -->
